# base-cmake-minhook-vcpkg

./: CMakeLists.txt
src/: Hooks.h  Jamflex.h  greedychimp.cpp  osclient.h
